cmake_minimum_required(VERSION 3.15)
project(GPrep)

set(CMAKE_CXX_STANDARD 20)

add_executable(GPrep LicenseKeyFormatting.cpp)
add_executable(FruitIntoBaskets FruitIntoBaskets.cpp)
add_executable(LongestSubstringWithoutRepeatingCharacters LongestSubstringWithoutRepeatingCharacters.cpp)
add_executable(findDuplicates findDuplicates.cpp)
add_executable(FindPivotIndex FindPivotIndex.cpp)
add_executable(WordCountEngine WordCountEngine.cpp)
add_executable(AddTwoNumbers AddTwoNumbers.cpp)
add_executable(UnlockSafe UnlockSafe.cpp)
add_executable(SockMerchant SockMerchant.cpp)
add_executable(HIndex HIndex.cpp)
add_executable(LargestNumberAtLeastTwiceOfOthers LargestNumberAtLeastTwiceOfOthers.cpp)
add_executable(PlusOne PlusOne.cpp)
add_executable(OddEvenJump OddEvenJump.cpp)
add_executable(SingleNumber SingleNumber.cpp)
add_executable(HappyNumber HappyNumber.cpp)
add_executable(MaximumSubarray MaximumSubarray.cpp)
add_executable(ClosestValueBST ClosestValueBST.cpp)
add_executable(BranchSums BranchSums.cpp)
add_executable(DepthFristSearch DepthFristSearch.cpp)
add_executable(LinkedListConstruction LinkedListConstruction.cpp)
add_executable(ProductSum ProductSum.cpp)
add_executable(findLargestThreeNumbers findLargestThreeNumbers.cpp)
add_executable(MaxSumSubarray MaxSumSubarray.cpp)
add_executable(subsequence IsSubsequence.cpp)
add_executable(scratch scratch.cpp)
add_executable(LinkedListCycle LinkedListCycle.cpp)
add_executable(ThreeNumberSum ThreeNumberSum.cpp)
add_executable(InvertBinaryTree InvertBinaryTree.cpp)
add_executable(Permutations Permutations.cpp)